--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,4 +12,10 @@
 <body class="font-['helvetica_now_display']">
     <nav class="w-full fixed top-0 left-0 px-5 py-3">
         <h3 class="text-xl">Scatch</h3>
+        <div class="flex gap-5 ">
+            <a href="">shop</a>
+            <a href="">cart</a>
+            <a href="">My Account</a>
+            <a href="">Logout</a>
+        </div>
     </nav>
